--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <script src="skript.js"></script>
-    <title>Pumpkin Pie</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Klikací Počítadlo</title>
+<link rel="stylesheet" href="styles.css" />
+<script src="script.js"></script>
 </head>
 <body>
-    <h1 id="welcometxt">My Pumpkin</h1>
-    <div id="pumpkinimgdiv">
-        <h1 id="pumpkinname"></h1>
-        <img src="https://th.bing.com/th/id/R.9d576cd554dc3fccdddbe17e88420b7d?rik=2FvaL%2fWX7NfXwA&pid=ImgRaw&r=0" alt="pumpkin" id="imgpum">
-    </div>
-    <div id="optionsdiv">
-        <h1 class="optionsuptexts">Jméno dýně</h1>
-        <form>
-        <input autofocus="" id="name" placeholder="Name">   
-        <input type="submit">
-        </form>
-        <select id="color-change">
-            <option value="black">Black</option>
-            <option value="red">Red</option>
-            <option value="blue">Blue</option>
-            <option value="green">Green</option>
-            <option value="white">White</option>
-        </select>
-    </div>
+<div id="updivs">
+<div id="rightupimg">
+    <img src="https://th.bing.com/th?id=OIF.WIokBp2pphEIzV2%2bAkJykQ&w=153&h=180&c=7&r=0&o=7&pid=1.7&rm=3" alt="" class="images">
+</div>
+<div id="leftupimg">
+    <img src="https://th.bing.com/th?id=OIF.WIokBp2pphEIzV2%2bAkJykQ&w=153&h=180&c=7&r=0&o=7&pid=1.7&rm=3" alt="" class="images">
+</div>
+</div>
+<div id="butdiv">
+    <button id="bigBtn">0</button>
+</div>
+<div id="info">
+    <p id="infotext"></p>
+</div>
+<div id="downdivs">
+<div id="rightdownimg">
+    <img src="https://th.bing.com/th?id=OIF.WIokBp2pphEIzV2%2bAkJykQ&w=153&h=180&c=7&r=0&o=7&pid=1.7&rm=3" alt="" class="images">
+</div>
+<div id="leftdownimg">
+    <img src="https://th.bing.com/th?id=OIF.WIokBp2pphEIzV2%2bAkJykQ&w=153&h=180&c=7&r=0&o=7&pid=1.7&rm=3" alt="" class="images">
+</div>
+</div>
 </body>
 </html>
